add swagger spec generation rules
