# src/product-api/swagger.yaml
@@ -1,14 +1,67 @@
 basePath: /
 consumes:
 - application/json
+definitions:
+  Product:
+    properties:
+      description:
+        description: the description for this product
+        maxLength: 10000
+        type: string
+        x-go-name: Description
+      id:
+        description: the id for the product
+        format: int64
+        minimum: 1
+        type: integer
+        x-go-name: ID
+      name:
+        description: the name for this product
+        maxLength: 255
+        type: string
+        x-go-name: Name
+      price:
+        description: the price for the product
+        format: float
+        minimum: 0.01
+        type: number
+        x-go-name: Price
+      sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
+        type: string
+        x-go-name: SKU
+    required:
+    - name
+    - price
+    - sku
+    type: object
+    x-go-package: github.com/berkayhellagun/microservice/src/product-api/data
 info:
   description: '# Documentation for Product API'
   title: of Product API
 paths:
+  /products:
+    get:
+      description: Return a list of products from the database
+      operationId: listProducts
+      responses:
+        "200":
+          $ref: '#/responses/productsResponse'
+      tags:
+      - products
   /products/{id}:
     delete:
       description: Update a products details
       operationId: deleteProduct
+      parameters:
+      - description: The ID of the product to delete from the database
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContentResponse'
@@ -20,6 +73,15 @@ paths:
       - products
 produces:
 - application/json
+responses:
+  noContent:
+    description: ""
+  productsResponse:
+    description: A list of products return in the response
+    schema:
+      items:
+        $ref: '#/definitions/Product'
+      type: array
 schemes:
 - http
 swagger: "2.0"
